k8s/apps/app4/app4-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app4
  namespace: sso-pilot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app4
  template:
    metadata:
      labels:
        app: app4
    spec:
      containers:
        - name: app4
          image: sso-app4:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
