k8s/apps/app4/app4-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app4
  namespace: sso-pilot
spec:
  selector:
    app: app4
  ports:
    - port: 8080
      targetPort: 8080
